# useful-haskell

./: .gitignore  LICENSE  Makefile  README.md  useful-haskell.cabal
app/: Main.hs
src/: Lib.hs  LinkedList.hs
