name:                useful-haskell
version:             0.1.0
synopsis:            Useful Haskell
description:         Please see README.md
homepage:            https://github.com/mrlsd/useful-haskell
license:             MIT
license-file:        LICENSE
author:              Evgeny Ukhanov
copyright:           2016 Evgeny Ukhanov 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable main-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , useful-haskell
  default-language:    Haskell2010

test-suite useful-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , useful-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mrlsd/useful-haskell
